--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /data/primary_question_dict.json
 /data/paragraph_column.csv
 /data/question_merged.csv
+/data/q2q_pair_tk.txt
+/data/paragraph_column.txt
