* update the question to question match data loader

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /data/question_merged.csv
 /data/q2q_pair_tk.txt
 /data/paragraph_column.txt
+/data/primary_question_dict_bd.json
+/data/q2q_pair_bd.txt
