* finished the data augmentation task for question question matching and train/test the new model

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /data/paragraph_column.txt
 /data/primary_question_dict_bd.json
 /data/q2q_pair_bd.txt
+/data/q2q_pair_merged.txt
+/data/split_data.pkl
